# hacker-news-small-sites-website

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  chroma-ingest.py  chroma_query.py  embedding_models.py  entries-to-embeddings.py  git_to_jsonl.py  justfile  pyproject.toml  webserver.py
.github/workflows/: build.yml  build_and_deploy.yml
exploration/: chroma-ingest-embeddings.py  chroma-query-data-file.py  chroma-webserver-fastui.py  ingest.py  search.py
web-templates/: search.html
